Working on $enumdef documentation...

--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -1,5 +1,5 @@
 <div id="api-list">
-    <h2 class="off-left">> Keywords</h2>
+    <h2 class="off-left">> Reference</h2>
     <ol id="keyword-list"> 
         <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self"><strong>$global</strong></a></li>
     {{#classes}}
