--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -5,8 +5,8 @@
             <hr />    
 
             <ol id="main-links">
-                <li id="joopl-minified"><a href="https://joopl.codeplex.com/downloads/get/674883" target="_self">Download minified jOOPL 2.2.0</a></li>
-                <li id="joopl-sourcecode"><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest" target="_self">Browse latest source code</a></li>
+                <li id="joopl-minified"><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_self">jOOPL 2.2.0 CDN</a></li>
+                <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
             </ol>
 
             <h2>Welcome to the official jOOPL documentation site!</h2>
@@ -16,6 +16,12 @@
 
             <h3>Licensing</h3>
             <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
+
+            <h3>Now jOOPL on CDNJS!</h3>
+            <p>Now jOOPL is in <a href="http://cdnjs.com/" target="_blank">CDNJS</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
+            <strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js</strong>
+            <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
+            <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
 
             <h3>How to get started?</h3>
             <p>First of all, take a look at the <a href="classes/$def.html">documentation talking about how to work with classes</a> and <a href="classes/$namespace.html">namespaces</a>!</p>
@@ -64,6 +70,9 @@ $namespace.register("samples", function() {
             <p>This project is actively developed by Matias Fidemraizer (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">LinkedIn profile here</a>)</p>
 
             <h3>I want to contribute, give feedback...</h3>
-            <p><i>It would be a great idea! Send me a message <a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">to my LinkedIn profile</a> and we can start talking there. Or just <a href="http://joopl.codeplex.com" target="_blank">open a discussion/issue on the official jOOPL CodePlex site</a>!</p>
+            <p>Great! You're welcome.</p>
+            <p>The main channel for discussions and ask questions is <a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">the jOOPL's Google Group / Mailing list (click here to go there)</a>. Feel free to post any question, suggestion or debate about any feature or improvement.</p>
+            <p>Also, you can <a href="https://github.com/mfidemraizer/joopl" target="_blank">fill an issue in the jOOPL's GitHub repository (click here to go there).</a></p>
+            <p><i>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
         </div>
     </div>
