--- a/yuidoc/themes/default/layouts/main.handlebars
+++ b/yuidoc/themes/default/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{htmlTitle}}</title>
+    <title>jOOPL: {{htmlTitle}}</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{yuiGridsUrl}}">
     <link rel="stylesheet" href="{{projectAssets}}/vendor/prettify/prettify-min.css">
@@ -19,7 +19,7 @@
     <script src="{{projectAssets}}/js/apidocs.js"></script>-->
 </head>
 <body class="yui3-skin-sam">
-    <a href="https://github.com/mfidemraizer/joopl"><img style="z-index: 9999; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 9999" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 <div id="doc">
     <div id="hd" class="yui3-g header" style="display: none">
@@ -38,7 +38,7 @@
 
         <div id="sidebar-container" class="yui3-u-1-4">
             {{#if projectLogo}}
-                <img src="{{projectLogo}}" title="{{projectName}}" onclick="window.location='{{projectRoot}}index.html'"/>
+                <img id="project-logo" src="{{projectLogo}}" title="{{projectName}}" onclick="window.location='{{projectRoot}}index.html'"/>
             {{else}}
                 <img src="{{projectAssets}}/css/logo.png" title="{{projectName}}" />
             {{/if}}
