--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -4,12 +4,14 @@
             <strong style"color: red">Important note: This documentation site work is still in progress. For any doubt, suggestion or any kind of feedback, please create a new issue or discussion in the <a href="http://joopl.codeplex.com">jOOPL's CodePlex site</a></strong>
             <hr />    
 
+            <h2>Welcome to the official jOOPL documentation site!</h2>
+
+            <h3>Useful links</h3>
             <ol id="main-links">
                 <li id="joopl-minified"><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_self">jOOPL 2.2.0 CDN</a></li>
                 <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
             </ol>
 
-            <h2>Welcome to the official jOOPL documentation site!</h2>
             <p>jOOPL stands for <strong>J</strong>avaScript <strong>O</strong>bject-<strong>O</strong>riented <strong>P</strong>rogramming <strong>L</strong>ibrary.</p>
             <p>JavaScript has a limited but yet useful type definition system. In comparison to other modern programming languages like C#, Java, Ruby, Python and many others, JavaScript is not class-oriented but prototype-oriented.</p>
             <p>jOOPL introduces a powerful class-oriented type definition system that equals most of features found in modern and well-known object-oriented languages like C# and Java, and it retaains 100% compatibility with plain JavaScript objects since jOOPL creates standard JavaScript constructors.</p>
@@ -19,7 +21,7 @@
 
             <h3>Now jOOPL on CDNJS!</h3>
             <p>Now jOOPL is in <a href="http://cdnjs.com/" target="_blank">CDNJS</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
-            <strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js</strong>
+            <a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_blank"><strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js</strong></a>
             <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
             <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
 
