--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -1,5 +1,5 @@
 <div id="api-list">
-    <h2 class="off-left">> Keywords</h2>
+    <h2 class="off-left">> API reference</h2>
     <ol id="keyword-list"> 
         <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self"><strong>$global</strong></a></li>
     {{#classes}}
@@ -20,15 +20,15 @@
         <li><a href="{{projectRoot}}classes/$def.html#class-instances" target="_self">Creating class instances how-to</li>
         <li><a href="{{projectRoot}}classes/$def.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
+        <li><a href="{{projectRoot}}classes/$enumdef.html#index" target="_selft">Enumerations</a></li>
     </ol>
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
         <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
-        <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
-        <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
-        <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
-        <!--<li><a href="{{projectRoot}}classes/$def.html#class-properties" target="_self">Test</a></li>-->
+        <li><a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a></li>
+        <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
+        <li><a href="https://github.com/mfidemraizer/joopl/issues" target="_blank">Issue tracker</a></li>
     </ol>
 
     <div id="api-tabview" class="tabview" style="display: none">
