Documentation fix on $def and properties
A sample code had a wrong defined constructor.

--- a/yuidoc/themes/default/layouts/main.handlebars
+++ b/yuidoc/themes/default/layouts/main.handlebars
@@ -57,5 +57,9 @@
         </div>
     </div>
 </div>
+
+    <footer id="page-footer">
+        &copy; 2013 <a href="http://www.linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer</a>. jOOPL is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License 2.0.</a>
+    </footer>
 </body>
 </html>
