--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -4,7 +4,7 @@
             <strong style"color: red">Important note: This documentation site work is still in progress. For any doubt, suggestion or any kind of feedback, please create a new issue or discussion in the <a href="http://joopl.codeplex.com">jOOPL's CodePlex site</a></strong>
             <hr />    
 
-            <h2>Welcome to the official jOOPL documentation site!</h2>
+            <h2>Welcome to the official jOOPL site!</h2>
 
             <h3>Useful links</h3>
             <ol id="main-links">
