--- a/yuidoc/themes/default/assets/css/main.css
+++ b/yuidoc/themes/default/assets/css/main.css
@@ -18,6 +18,11 @@ Here's a quick lookup table:
 20px - 153.846%
 */
 
+#page-footer {
+    margin: 0 auto;
+    width: 36em;
+}
+
 .off-left {
     border-bottom: 1px dotted #284963;
     color: #284963;
@@ -35,7 +40,8 @@ ol#main-links {
 }
 
 .yui3-u-3-4 {
-        background-color: white;
+    background-color: white;
+    border: 2px solid white;
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 0 10px #CCCCCC inset;
     padding-bottom: 2em;
@@ -81,7 +87,7 @@ ol#keyword-list li {
     background-color: white;
     border: 2px solid white;
     border-radius: 10px 10px 10px 10px;
-    box-shadow: 0 -10px 100px 5px #A0D1FA inset;
+    box-shadow: 0 -10px 40px 5px #25A3D9 inset;
     padding: 10px 30px;
     width: 260px;
 }
@@ -279,7 +285,7 @@ th {
     padding: 0 15px 0 10px;
 }
 #bd {
-    padding: 7px 0 130px;
+    padding: 7px 0 10px;
     position: relative;
     width: 99%;
 }
