--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -1,9 +1,5 @@
     <div class="apidocs">
         <div id="docs-main" class="content">
-            <hr />
-            <strong style"color: red">Important note: This documentation site work is still in progress. For any doubt, suggestion or any kind of feedback, please create a new issue or discussion in the <a href="http://joopl.codeplex.com">jOOPL's CodePlex site</a></strong>
-            <hr />    
-
             <h2>Welcome to the official jOOPL site!</h2>
 
             <h3>Useful links</h3>
@@ -21,7 +17,7 @@
 
             <h3>Now jOOPL on CDNJS!</h3>
             <p>Now jOOPL is in <a href="http://cdnjs.com/" target="_blank">CDNJS</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
-            <a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_blank"><strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js</strong></a>
+            <a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js" target="_blank"><strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js</strong></a>
             <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
             <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
 
@@ -31,6 +27,7 @@
             <ol>
                 <li><a href="test/namespace.test.html">Namespace tests</a></li>
                 <li><a href="test/class.test.html">Class tests</a></li>
+                <li><a href="test/enum.test.html">Enum tests</a></li>
             </ol>
             <p>A good idea is taking a look at source code of the whole test pages: the jOOPL-based JavaScript code is developed in the body of the documents. That way, anyone can explore all jOOPL features, as the tests are also documentation!</p>
 
@@ -46,6 +43,8 @@
                 <li>Encapsulation</li>
                 <li>ECMA-Script 5.x and 6 properties</li>
                 <li>Exclusive, easy-to-use and powerful custom events!</li>
+                <li>Enumerations</li>
+                <li>Declarative class metadata using attributes</li>
             </ol>
 
             <p>And it is a tiny JavaScript library when minimized (<i>~8KB</i>)!!</p>
