Updating the YUIDoc theme to point to jsDelivr CDN-hosted 2.3.0 version

--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -4,7 +4,7 @@
 
             <h3>Useful links</h3>
             <ol id="main-links">
-                <li id="joopl-minified"><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js" target="_self">jOOPL 2.3.0 CDN</a></li>
+                <li id="joopl-minified"><a href="http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js" target="_self">jOOPL 2.3.0 CDN</a></li>
                 <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
             </ol>
 
@@ -15,9 +15,9 @@
             <h3>Licensing</h3>
             <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
 
-            <h3>Now jOOPL on CDNJS!</h3>
-            <p>Now jOOPL is in <a href="http://cdnjs.com/" target="_blank">CDNJS</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
-            <a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js" target="_blank"><strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js</strong></a>
+            <h3>Now jOOPL on jsDelivr!</h3>
+            <p>Now jOOPL is in <a href="http://www.jsdelivr.com" target="_blank">jsDelivr</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
+            <a href="http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js" target="_blank"><strong>http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js</strong></a>
             <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
             <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
 
