--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -36,7 +36,7 @@
     <ol id="quick-links">
         <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
         <li><a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a></li>
-        <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.3.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.3.0 (CDN)</strong></a></li>
+        <li><a href="http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.3.0 (CDN)</strong></a></li>
         <li><a href="https://github.com/mfidemraizer/joopl/issues" target="_blank">Issue tracker</a></li>
     </ol>
 
