--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -74,6 +74,6 @@ $namespace.register("samples", function() {
             <p>Great! You're welcome.</p>
             <p>The main channel for discussions and ask questions is <a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">the jOOPL's Google Group / Mailing list (click here to go there)</a>. Feel free to post any question, suggestion or debate about any feature or improvement.</p>
             <p>Also, you can <a href="https://github.com/mfidemraizer/joopl" target="_blank">fill an issue in the jOOPL's GitHub repository (click here to go there).</a></p>
-            <p><i>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
+            <p>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
         </div>
     </div>
