--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -3,12 +3,12 @@
     <ol id="oop-hints">
         <li><a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
         <li><a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-define"target="_self">Define a class how-to</a></li>
+        <li><a href="{{projectRoot}}classes/$def.html#class-define" target="_self">Define a class how-to</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-constructors" target="_self">Class constructors</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-properties" target="_self">Class properties</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-methods" target="_self">Class methods</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-events" target="_self">Custom events how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-instances" target="_self">Creating class instances how-to</li>
+        <li><a href="{{projectRoot}}classes/$def.html#class-instances" target="_self">Creating class instances how-to</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
         <li><a href="{{projectRoot}}classes/$def.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
         <li><a href="{{projectRoot}}classes/$enumdef.html#index" target="_self">Enumerations</a></li>
