--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -3,24 +3,17 @@
     <ol id="oop-hints">
         <li><a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
         <li><a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-define" target="_self">Define a class how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-constructors" target="_self">Class constructors</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-properties" target="_self">Class properties</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-methods" target="_self">Class methods</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-events" target="_self">Custom events how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-instances" target="_self">Creating class instances how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
+        <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self"><strong>$global namespace</strong></a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-define" target="_self">Define a class how-to</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-constructors" target="_self">Class constructors</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-properties" target="_self">Class properties</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-methods" target="_self">Class methods</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-events" target="_self">Custom events how-to</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-instances" target="_self">Creating class instances how-to</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
+        <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
         <li><a href="{{projectRoot}}classes/$enumdef.html#index" target="_self">Enumerations</a></li>
         <li><a href="{{projectRoot}}classes/Attribute.html#index" target="_self">Custom metadata: attributes</a></li>
-    </ol>
-
-    <h2 class="off-left">> Keywords</h2>
-    <ol id="keyword-list"> 
-        <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self"><strong>$global</strong></a></li>
-        <li><a href="{{projectRoot}}classes/$def.html" target="_self"><strong>$def</strong></a></li>
-        <li><a href="{{projectRoot}}classes/$enumdef.html" target="_self"><strong>$enumdef</strong></a></li>
-        <li><a href="{{projectRoot}}classes/$def.html#class-istypeof" target="_self">Object.<strong>isTypeOf</strong></a></li>
     </ol>
 
 
