--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -14,29 +14,33 @@
         <li><a href="{{projectRoot}}classes/define%20classes%20with%20joopl.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
         <li><a href="{{projectRoot}}classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a></li>
         <li><a href="{{projectRoot}}classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a></li>
+        <li><a href="{{projectRoot}}classes/Exception%20throwing%20best%20practices.html" target="_self">Throwing exceptions best practice</a></li>
     </ol>
 
-    <h2 class="off-left">> Hot topics</h2>
+    <h2 class="off-left">> Tests</h2>
     <ol id="oop-hints">
-        <li><a href="{{projectRoot}}classes/Exception%20throwing%20best%20practices.html" target="_self">Throwing exceptions best practice</a></li>
+        <li><a href="{{projectRoot}}test/namespace.test.html" target="_self">Namespace tests</a></li>
+        <li><a href="{{projectRoot}}test/class.test.html" target="_self">Class tests</a></li>
+        <li><a href="{{projectRoot}}test/enum.test.html" target="_self">Enumeration tests</a></li>
     </ol>
 
     <h2 class="off-left">> API reference</h2>
     <ol id="class-list"> 
+        <li><a href="{{projectRoot}}classes/joopl.object.html" target="_self"><strong>joopl.Object</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.enumvalue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.type.html" target="_self"><strong>joopl.Type</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.exception.html" target="_self"><strong>joopl.Exception</strong></a></li>
         <li><a href="{{projectRoot}}classes/joopl.argumentexception.html" target="_self"><strong>joopl.ArgumentException</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.notimplementedexception.html" target="_self"><strong>joopl.ArgumentException</strong></a></li>
+        <li><a href="{{projectRoot}}classes/joopl.notimplementedexception.html" target="_self"><strong>joopl.NotImplementedException</strong></a></li>
     </ol>
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
         <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
         <li><a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a></li>
-        <li><a href="http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.3.0 (CDN)</strong></a></li>
+        <li><a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.4.0 (CDN)</strong></a></li>
         <li><a href="https://github.com/mfidemraizer/joopl/issues" target="_blank">Issue tracker</a></li>
     </ol>
 
