Fixing namespace URLs in doc sidebar..........................

--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -1,9 +1,9 @@
 <div id="api-list">
     <h2 class="off-left">> Object-oriented programming</h2>
     <ol id="oop-hints">
-        <li><a href="{{projectRoot}}classes/joopl.$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
-        <li><a href="{{projectRoot}}classes/joopl.$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="{{projectRoot}}classes/joopl.$namespace.html#namespace-global" target="_self">$global namespace</a></li>
+        <li><a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
+        <li><a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
+        <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self">$global namespace</a></li>
         <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a></li>
         <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a></li>
         <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a></li>
